helloworld-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"   
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - docker.127-0-0-1.nip.io
    secretName: docker-hello-world-tls
  rules:
  - host: docker.127-0-0-1.nip.io
    http:
      paths:
      - backend:
          serviceName: docker-hello-world-service
          servicePort: 8088
